# Aletheia-AI---Autonomous-Thinking-Assistant

./: .env.example  .gitignore  LICENSE  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html
src/aletheia_ai/: __init__.py  bootstrap.py  config.py  logging_config.py  main.py
src/aletheia_ai/action/: action_decision_engine.py  action_engine.py  browser_controller.py  function_calling_agent.py
src/aletheia_ai/core/: __init__.py  contracts.py  exceptions.py  models.py
src/aletheia_ai/feedback/: __init__.py  feedback_loop.py  self_correction_engine.py
src/aletheia_ai/llm/: __init__.py  llm_router.py  ollama_client.py  openrouter_client.py
src/aletheia_ai/orchestrator/: autonomous_assistant.py
src/aletheia_ai/planning/: task_planner.py
src/aletheia_ai/reasoning/: __init__.py  gemini_reasoner.py
src/aletheia_ai/ui/: __init__.py  app.py
src/aletheia_ai/utils/: retry.py
src/aletheia_ai/validation/: validator.py
src/aletheia_ai/vision/: screenshot_provider.py  vision_analyzer.py
